# federation

./: .gitignore  README.md  commitlint.config.js  package-lock.json  package.json  stop-all.sh
.devcontainer/: devcontainer.json
clients/next/: package.json  tailwind.config.ts
deploy/: gateway-deployment.yaml  users-deployment.yaml  users-node-deployment.yaml
gateway/: Dockerfile  package.json  tsconfig.json
gateway/src/: gateway.ts  index.ts
python/: .gitignore  data.json  db.sqlite3  requirements.txt
python/api/: schema.py
python/python/: asgi.py  settings.py  urls.py
scripts/: check-services.sh
services/collections-go/: Dockerfile  README.md  go.mod  go.sum  gqlgen.yml  main.go  package.json  schema.graphql  schema.processed.json  server.js
services/collections-python/: .gitignore  Dockerfile  README.md  app.py  env.sh  manage.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_collections.py  setup_env.sh  start.sh  stop.sh  test-health.sh
services/collections-python/collections_project/: manage.py
services/collections-python/collections_project/collections_app/: admin.py  apps.py  models.py  schema.py  views.py
services/collections-python/collections_project/collections_app/migrations/: 0001_initial.py
services/collections-python/collections_project/collections_project/: asgi.py  settings.py  urls.py  wsgi.py
services/products-java/: build.gradle  settings.gradle
services/products-ruby/: .gitignore  Dockerfile  Gemfile  README.md
services/python/: README.md  manage.py  requirements.txt
users/: package.json
(+103 files in other folders)
